# rogue-hunter

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_and_run.bat  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
content/: balance.toml  clues.toml  enemies.toml  events.toml  gathers.toml  grimoire.toml  guide.toml  hunter.toml  items.toml  machines.toml  npcs.toml  openings.toml  origins.toml  recipes.toml  schemes.toml  strings.csv  ui.toml  villains.toml
content/hunters/: advocate.toml  confessor.toml  huntress.toml  occultist.toml
content/maps/: outlying-abbey.toml  outlying.toml  settlement-mill.toml  settlement.toml  wilderness-gorge.toml  wilderness.toml
crates/rh-cli/: Cargo.toml
crates/rh-cli/src/: main.rs
crates/rh-client-core/: Cargo.toml
crates/rh-client-core/src/: input.rs  lib.rs  view.rs
crates/rh-client-core/tests/: session.rs
crates/rh-content/: Cargo.toml
crates/rh-content/src/: catalogue.rs  embedded.rs  lib.rs  schema.rs  strings.rs  validate.rs
crates/rh-content/src/strings/: csv.rs
crates/rh-content/tests/: catalogue.rs
crates/rh-core/: Cargo.toml
crates/rh-core/src/: ai.rs  combat.rs  command.rs  economy.rs  events.rs  fov.rs  geometry.rs  hash.rs  lib.rs  rng.rs  sim.rs  state.rs  viability.rs  world.rs
crates/rh-core/tests/: command_bytes.rs  rng_trace.rs
crates/rh-core/tests/fixtures/: command_bytes.txt  rng_trace.txt
crates/rh-gen/: Cargo.toml
crates/rh-gen/src/: cast.rs  lib.rs  materialise.rs  planner.rs
crates/rh-gen/tests/: generator.rs  mechanics.rs
crates/rh-replay/: Cargo.toml
crates/rh-replay/src/: autoplay.rs  codec.rs  corpus.rs  lib.rs
crates/rh-replay/tests/: golden.rs  golden_values.rs  replay_contract.rs  trace.rs
crates/rh-replay/tests/fixtures/: golden_values.txt
crates/rh-terminal/: Cargo.toml
crates/rh-terminal/src/: main.rs  render.rs
crates/rh-web/: Cargo.toml
crates/rh-web/src/: lib.rs
docs/: MVP.md  onboarding-playtest.md
pasm/: __init__.py  audit.py  context.py
pasm/architecture/: __init__.py  model.py  validation.py
pasm/cli/: __init__.py  main.py
pasm/core/: __init__.py  findings.py  model.py  parser.py  references.py  validation.py
pasm/domains/: __init__.py
pasm/domains/game_design/: __init__.py  model.py  scenarios.py  validation.py
pasm/implementation/: __init__.py  model.py  observation.py  validation.py
pasm/integration/: __init__.py  traceability.py  validation.py
pasm/migration/: __init__.py  model.py  validation.py
pasm/scanners/: __init__.py  html.py  javascript.py  rust.py  toml.py
pasm/spec/core/: decisions.yaml  foundation.yaml  game-vision.yaml  gameplay-contracts.yaml
pasm/spec/roadmap/: milestone-2-consequences-and-clarity.yaml  milestone-3-trustworthy-and-approachable.yaml  milestone-4-a-valley-that-interacts.yaml  milestone-5-player-expression.yaml  milestone-6-the-campaign.yaml
pasm/tools/: extract_strings.py
tests/replays/: early-hunt-ready.yaml  fallback-hunt-ready.yaml  mvp-winning-route.yaml
web/: index.html  main.js  style.css
