[workspace]
resolver = "2"
members = [
  "crates/rh-content",
  "crates/rh-core",
  "crates/rh-gen",
  "crates/rh-replay",
  "crates/rh-client-core",
  "crates/rh-cli",
  "crates/rh-terminal",
  "crates/rh-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jkeywo/rogue-hunter"

[workspace.dependencies]
# Internal crates
rh-content = { path = "crates/rh-content" }
rh-core = { path = "crates/rh-core" }
rh-gen = { path = "crates/rh-gen" }
rh-replay = { path = "crates/rh-replay" }
rh-client-core = { path = "crates/rh-client-core" }

# Shared engine layer, pinned to a rev. Bumping it is a PR whose diff
# touches nothing but this file and Cargo.lock; anything else means the
# engine changed behaviour. For local work against a checkout, use a
# gitignored .cargo/config.toml [patch] -- see vellum's README.
vellum-digest = { git = "https://github.com/jkeywo/vellum", rev = "1e18ad1bc16e3c6c546ab9200e13a05a5819e05c" }
vellum-replay = { git = "https://github.com/jkeywo/vellum", rev = "1e18ad1bc16e3c6c546ab9200e13a05a5819e05c" }
vellum-rng = { git = "https://github.com/jkeywo/vellum", rev = "1e18ad1bc16e3c6c546ab9200e13a05a5819e05c" }
vellum-strings = { git = "https://github.com/jkeywo/vellum", rev = "1e18ad1bc16e3c6c546ab9200e13a05a5819e05c" }

# External crates
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
postcard = { version = "1.1.3", features = ["alloc"] }
base64 = "0.22.1"
anyhow = "1.0.103"
thiserror = "2.0.18"
clap = { version = "4.6.2", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "deny"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
