[project]
name = "rogue-hunter-pasm"
version = "0.1.0"
description = "PASM specification and validation tooling for Rogue Hunter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
pasm = "pasm.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "pasm",
  "pasm.architecture",
  "pasm.cli",
  "pasm.core",
  "pasm.domains",
  "pasm.domains.game_design",
  "pasm.implementation",
  "pasm.integration",
  "pasm.migration",
  "pasm.scanners",
]
