[package]
name = "rh-cli"
description = "Headless developer CLI: generation inspector, replay checks, and corpus validation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rh"
path = "src/main.rs"

[dependencies]
rh-content = { workspace = true }
rh-core = { workspace = true }
rh-gen = { workspace = true }
rh-replay = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = "1"

[lints]
workspace = true
