[package]
name = "rh-content"
description = "Authored declarative content catalogue: schema types, embedded TOML content, and validation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vellum-strings = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
