[package]
name = "rh-core"
description = "Authoritative deterministic headless simulation: state, semantic commands, rules, and events."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vellum-digest = { workspace = true }
vellum-replay = { workspace = true }
vellum-rng = { workspace = true }
rh-content = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }

[lints]
workspace = true
