[package]
name = "rh-gen"
description = "Graph-first mystery generator, solvability planner, and generation inspector."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rh-content = { workspace = true }
rh-core = { workspace = true }
serde = { workspace = true }
thiserror.workspace = true

[lints]
workspace = true
