[package]
name = "rh-replay"
description = "Deterministic run harness: share codes, command logs, replay execution, and save round-trips."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vellum-digest = { workspace = true }
rh-content = { workspace = true }
rh-core = { workspace = true }
rh-gen = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
vellum-replay = { workspace = true, features = ["testkit"] }
